# modorganizer-helper

./: CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  SConscript  helper.pro  main.cpp  privileges.cpp  privileges.h
